# Uru

./: .eslintrc.json  .gitignore  CHANGELOG.md  LICENSE  README.md  esbuild.config.mjs  eslint.config.mjs  main.ts  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json  versions.json
.github/workflows/: release.yml
docs/: BETA_TEST_PLAN.md  khora-feature-request-maxitems.md  obsidian-submission.md
docs/superpowers/plans/: 2026-07-09-gpu-autodetect.md
docs/superpowers/specs/: 2026-07-09-gpu-autodetect-design.md
scripts/: install-to-vault.mjs  khora-pin.mjs  package.sh  run-tests.mjs  sidecar-embed.mjs  verify-staging.mjs
sidecar/: .gitignore  pyproject.toml
sidecar/scripts/: bench_llama.py  bench_llama.sh  smoke_sidecar.py  spike.py  test_bigdoc.py  test_chat.py  test_index.py
sidecar/uru_sidecar/: __init__.py  __main__.py  app.py  config.py  lifecycle.py  linking.py  llama.py  models.py  ontology.py  proxy.py  serialize.py
src/: paths.ts  settings.ts  vaultRegistry.ts
src/bootstrap/: gpu.ts  uv.ts
src/graph/: linker.ts
src/indexing/: hashStore.ts  indexer.ts
src/sidecar/: client.ts  manager.ts
src/types/: sidecar-files.d.ts
src/views/: chatView.ts  confirmModal.ts  recallView.ts  setupModal.ts
tests/: gpu.test.ts  khoraPin.test.ts  platformGuard.test.ts  sidecarEmbed.test.ts  vaultRegistry.test.ts
tests/support/: obsidian-stub.mjs
