[project]
name = "uru-sidecar"
version = "0.1.0"
description = "Local HTTP sidecar that drives khora for the Uru Obsidian plugin."
requires-python = ">=3.13"
dependencies = [
    "khora[sqlite-lance]",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "llama-cpp-python[server]>=0.3.2",
    "huggingface-hub>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uru_sidecar"]
